--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,11 @@
+* {
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 .row {
@@ -33,4 +34,19 @@ body {
 
 .name-container {
   font-weight: 800;
+}
+
+.cards-container {
+  display: grid;
+  grid-column-gap: 50px;
+  grid-template-columns: auto auto auto;
+  align-items: start;
+  padding: 50px 200px;
+}
+
+.card {
+  background: yellow;
+  font-weight: 800;
+  padding: 50px;
+  margin: 10px;
 }
